--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,13 @@
 .root-class {
     flex-grow: 1;
+    font-family: "Lato", sans-serif !important;
+}
+
+.app-bar {
+    background: transparent !important;
+    padding-left: 17%;
+    padding-right: 17%;
+    margin-top: -5px;
 }
 
 .unscrolled {
@@ -7,13 +15,9 @@
 }
 
 .scrolled {
+    background: white !important;
     box-shadow: initial;
-}
-
-.app-bar {
-    background: transparent !important;
-    padding-left: 20%;
-    padding-right: 20%;
+    animation: Header-Load 0.3s linear;
 }
 
 .header-logo {
@@ -24,6 +28,167 @@
     height: 6vmin;
 }
 
+.auth-button {
+    font-family: "Lato", sans-serif !important;
+    width: 225px;
+    text-transform: initial !important;
+    background-image: linear-gradient(45deg, #53b2fe, #065af3);
+    font-size: 10px !important;
+    color: white !important;
+    padding: 5px 10px !important;
+    margin-left: 5px !important;
+}
+
+.auth-btn-logo {
+    height: 25px;
+    filter: invert(1);
+}
+
+.info-button {
+    height: 40px;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.15) !important;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2) !important;
+    margin-left: 5px !important;
+    padding: 5px !important;
+    font-size: 10px !important;
+    color: white !important;
+}
+
+.info-btn-logo {
+    height: 25px;
+    margin-left: 3px;
+}
+
+.info-btn-1 {
+    width: 175px;
+}
+
+.info-btn-2 {
+    width: 90px;
+    text-transform: initial !important;
+}
+
+.info-btn-3 {
+    width: 80px;
+}
+
+.info-btn-4 {
+    width: 20px;
+}
+
+.info-btn-logo-4 {
+    margin-right: -10px !important;
+    height: 30px;
+}
+
+.info-btn-5 {
+    width: 200px;
+    font-size: 8px;
+    text-transform: initial !important;
+}
+
+.info-btn-6 {
+    width: 100px;
+    padding-left: 10px !important;
+}
+
+.info-btn-logo-6 {
+    height: 15px;
+}
+
+.material-icon {
+    font-size: 30px !important;
+    margin-left: 25px;
+}
+
+.material-icon-6 {
+    font-size: 20px !important;
+    margin-left: 0px;
+}
+
+.modal-title {
+    margin: 25px 15px;
+}
+
+.toggle-btn {
+    padding: 7px;
+    -webkit-border-radius: 51px;
+    -moz-border-radius: 51px;
+    border-radius: 51px;
+    background-color: #fff;
+    -webkit-box-shadow: 0 1px 7px 0 rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 1px 7px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 1px 7px 0 rgba(0, 0, 0, 0.3);
+}
+
+.toggle-item {
+    background-color: transparent;
+    padding: 7px 14px;
+    border-radius: 150px;
+    color: grey;
+    font-weight: 700;
+    font-size: 15px;
+    align-items: center;
+    cursor: pointer;
+}
+
+.toggle-active {
+    background-image: linear-gradient(45deg, #53b2fe, #065af3);
+    color: white;
+    font-weight: 700;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+/* ? Edit Register Form Styles */
+
+.edit-register-form {
+    align-items: center;
+}
+
+.MuiOutlinedInput-input {
+    padding: 14px !important;
+}
+
+.form-btn {
+    width: 95%;
+    margin: 15px 5px !important;
+    padding: 8px !important;
+    font-weight: 700 !important;
+    font-size: 16px !important;
+}
+
+/* ? Edit Register Form Styles */
+
+.input-field {
+    width: 95%;
+    font-size: 8px !important;
+    margin: 5px !important;
+}
+
+.Mui-focused fieldset {
+    border-color: #53b2fe !important;
+}
+
+/* ? Modal Styles */
+
+.auth-modal-head {
+    font-family: "Lato", sans-serif !important;
+    font-size: 26px;
+    color: gray;
+}
+/* ? Modal Styles */
+
+@keyframes Header-Load {
+    0% {
+        margin-top: -70px;
+    }
+    100% {
+        margin-top: 0px;
+    }
+}
+
 @media (max-width: 767px) {
     .app-bar {
         padding: 0;
@@ -31,5 +196,8 @@
     }
     .header-logo img {
         height: 13vmin;
+    }
+    .auth-modal-head {
+        font-size: 20px;
     }
 }
