--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -26,12 +26,242 @@
     border-radius: 8px;
     box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
     background-color: #fff;
-    padding: 50px 20px 0;
-    margin: -6.5% 9% 0%;
+    padding: 50px 5px 0;
+    margin: -7.5% 9% 0%;
     position: absolute;
-    width: 75%;
-    height: 35px;
+    width: 78%;
+    height: 30px;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
+
+.option {
+    margin-top: -5.5% !important;
+    width: 10%;
+    padding-bottom: 10px;
+    margin-bottom: -5px !important;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: grey;
+    font-size: 15px;
+}
+
+.option-8 {
+    font-size: 13px;
+}
+
+.option-img {
+    height: 40px;
+}
+
+.option-name-icon {
+    font-size: 15px !important;
+    position: absolute;
+    font-weight: 700;
+    padding-top: 2px;
+}
+
+.option.active {
+    color: #008cff;
+    border-bottom: solid 3px #008cff;
+    background: transparent;
+    border-radius: 0;
+}
+
+.config-row {
+    font-family: "Lato", sans-serif !important;
+    color: #4a4a4a !important;
+    margin: 0 0px 10px 15px;
+    padding-right: 15px;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.flights-block {
+    font-family: "Lato", sans-serif !important;
+}
+
+.MuiRadio-root {
+    font-family: "Lato", sans-serif !important;
+    padding: 3px !important;
+}
+
+.radio-btn.active > .MuiRadio-root {
+    color: black !important;
+}
+
+.MuiTypography-body1 {
+    font-family: "Lato", sans-serif !important;
+    font-weight: 900 !important;
+    font-size: 14px !important;
+    color: #9b9b9b !important;
+}
+
+.radio-btn.active > .MuiTypography-body1 {
+    color: black !important;
+}
+
+.radio-btn.active {
+    background: #e7e7e7;
+    padding-right: 5px;
+    border-radius: 20px;
+    font-weight: 700;
+    color: black;
+    text-transform: uppercase;
+}
+
+.select-input {
+    border: solid 1px #e7e7e7;
+    height: 100px;
+    cursor: pointer;
+}
+
+.select-input:hover {
+    background: #eaf5ff;
+}
+
+.select-1 {
+    width: 26%;
+    border-radius: 8px 0 0 8px;
+}
+
+.from-to {
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+    margin-left: -22px;
+    border-radius: 100%;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 1px 30px 0 rgba(0, 0, 0, 0.1);
+    z-index: 1;
+    cursor: pointer;
+    position: absolute;
+    color: #008cff;
+    margin-top: 30px;
+    margin-left: 285px;
+}
+
+.select-2 {
+    width: 26%;
+}
+
+.select-3 {
+    width: 13%;
+}
+
+.select-4 {
+    width: 13%;
+}
+
+.select-5 {
+    width: 22%;
+    border-radius: 0 8px 8px 0;
+}
+
+.from-loc {
+    font-family: "Lato", sans-serif !important;
+    padding: 5px 0 0 25px;
+    display: block;
+    color: #4a4a4a;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.airport-dets {
+    color: #4a4a4a;
+    font-weight: 500;
+    padding: 0 0 5px 25px;
+}
+
+.trending-search {
+    width: 100%;
+    display: flex;
+    margin-top: 10px;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+}
+
+.trend {
+    font-size: 12px;
+    font-weight: 600;
+    margin: 10px;
+}
+
+.search {
+    color: #4a4a4a;
+    font-weight: 500;
+    padding: 8px 10px;
+    border-radius: 4px;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+    background: #f2f2f2;
+    cursor: pointer;
+}
+
+.search-arrow {
+    color: #008cff;
+    font-size: 13px;
+    font-weight: 800;
+    display: inline-block;
+    width: 25px;
+}
+
+.search-icon {
+    position: absolute !important;
+    margin-top: -16px !important;
+}
+
+.search-btn {
+    font-family: "Lato", sans-serif !important;
+    background-image: linear-gradient(45deg, #53b2fe, #065af3);
+    text-transform: initial !important;
+    font-weight: 700 !important;
+    font-size: 24px !important;
+    color: white !important;
+    border-radius: 34px !important;
+    font-weight: 700 !important;
+    width: 216px;
+    padding: 0px !important;
+    margin-top: 65px !important;
+    margin-left: 40% !important;
+    position: absolute !important;
+}
+
+/* ? Autocomplete Input Field Styles Override */
+
+.MuiOutlinedInput-notchedOutline {
+    border: transparent !important;
+}
+
+.MuiOutlinedInput-notchedOutline:focus {
+    border: transparent !important;
+}
+
+.MuiAutocomplete-inputRoot {
+    padding: 0 9px 0 9px !important;
+    height: 50px;
+}
+
+.MuiAutocomplete-inputRoot .MuiAutocomplete-input {
+    font-family: "Lato", sans-serif !important;
+    min-width: 100%;
+    padding: 0 !important;
+    padding-left: 15px !important;
+    font-size: 30px;
+    font-weight: 900;
+}
+
+/* ? Autocomplete Input Field Styles Override */
 
 @media (max-width: 767px) {
     .top-div {
