--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -88,6 +88,18 @@
     font-family: "Lato", sans-serif !important;
 }
 
+.main-block-option {
+    margin: 0 50px;
+    justify-content: center;
+    display: grid;
+    font-size: 20px;
+}
+
+.main-block-option > b {
+    justify-content: center;
+    display: grid;
+}
+
 .MuiRadio-root {
     font-family: "Lato", sans-serif !important;
     padding: 3px !important;
@@ -148,7 +160,7 @@
     position: absolute;
     color: #008cff;
     margin-top: 30px;
-    margin-left: 285px;
+    margin-left: 23.5%;
 }
 
 .select-2 {
@@ -188,8 +200,51 @@
     display: flex;
     margin-top: 10px;
     position: absolute;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
+    margin-top: 1.5% !important;
+}
+
+.trend-seperation {
+    border: 1px solid #82828263;
+    margin: 5px 25px;
+}
+
+.fare-btn {
+    font-family: "Lato", sans-serif !important;
+    border-radius: 4px !important;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2) !important;
+    background-color: #ffffff !important;
+    padding: 8px 12px !important;
+    text-transform: uppercase !important;
+    margin-right: 10px !important;
+    cursor: pointer !important;
+    font-size: 11px !important;
+    font-weight: 700 !important;
+}
+
+.fare-btn.active {
+    background: #008cff !important;
+    color: #fff !important;
+}
+
+.class-btn {
+    margin: 0 !important;
+}
+
+.class-btn.active {
+    padding: 14px 12px !important;
+}
+
+.slider-val {
+    font-size: 25px;
+    font-weight: 900;
+    color: black;
+    margin-left: 25px;
+}
+
+.popover-span {
+    margin: 25px 0;
 }
 
 .trend {
@@ -206,6 +261,7 @@
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
     background: #f2f2f2;
     cursor: pointer;
+    margin-top: 0;
 }
 
 .search-arrow {
@@ -250,18 +306,110 @@
 .MuiAutocomplete-inputRoot {
     padding: 0 9px 0 9px !important;
     height: 50px;
+    width: 98.5% !important;
 }
 
 .MuiAutocomplete-inputRoot .MuiAutocomplete-input {
     font-family: "Lato", sans-serif !important;
     min-width: 100%;
-    padding: 0 !important;
-    padding-left: 15px !important;
+    padding: 25px 0 25px 15px !important;
     font-size: 30px;
     font-weight: 900;
+    height: 100%;
+    margin-top: -25px;
+    cursor: pointer;
 }
 
 /* ? Autocomplete Input Field Styles Override */
+
+/* ? Datepicker internal styles Override */
+
+.MuiPopover-paper {
+    margin-left: 155px !important;
+    margin-top: -50px !important;
+}
+
+.MuiInputAdornment-root > .MuiButtonBase-root.MuiIconButton-root {
+    padding: 40px 70px 35px 60px !important;
+    margin-top: -155px !important;
+    margin-left: -8px !important;
+    opacity: 0 !important;
+}
+
+.empty-date > .MuiInputBase-root > .MuiInputAdornment-root > .MuiButtonBase-root.MuiIconButton-root {
+    margin-top: -30px !important;
+}
+
+.MuiInput-underline:before {
+    border: none !important;
+}
+
+.MuiInput-underline:after {
+    border: none !important;
+}
+
+/* ? Datepicker internal styles Override */
+
+/* ? Popover internal styles Override */
+
+.MuiPopover-paper {
+    margin: 0% !important;
+    min-width: 450px !important;
+    min-height: 250px !important;
+    padding: 1% 2%;
+}
+
+/* ? Popover internal styles Override */
+
+.date-title {
+    color: #4a4a4a;
+    font-weight: 700;
+    font-size: 14px;
+    margin: 10px;
+    margin-bottom: 5px;
+}
+
+.day-title {
+    margin-top: 5px;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+
+.date-icon {
+    margin-top: -3px !important;
+    position: absolute;
+    font-size: 22px !important;
+    color: #008cff !important;
+    font-weight: 700 !important;
+}
+
+.cancel-icon {
+    position: absolute;
+    margin-top: -2%;
+    margin-left: 10%;
+    font-size: 22px !important;
+    color: grey;
+    z-index: 1;
+}
+
+.day {
+    font-size: 30px;
+    font-weight: 900;
+    margin-left: 10px;
+    color: black;
+}
+
+.month {
+    font-size: 22px;
+    font-weight: 500;
+    color: black;
+}
+
+.year {
+    font-size: 23px;
+    font-weight: 500;
+    color: black;
+}
 
 @media (max-width: 767px) {
     .top-div {
