--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -39,6 +39,46 @@
     background-image: linear-gradient(92deg, #f0772c, #f95776);
 }
 
+.google-auth-block {
+    font-family: "Lato", sans-serif !important;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.google-auth-title {
+    font-size: 12px;
+    color: #9b9b9b !important;
+    margin-bottom: 20px;
+}
+
+.google-auth-icon {
+    height: 20px;
+    margin-right: 10px;
+}
+
+.google-auth-button {
+    font-family: "Lato", sans-serif !important;
+    border-radius: 4px !important;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    border: none;
+    background-color: #fff !important;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.3);
+    font-size: 14px !important;
+    color: #4a4a4a !important;
+    font-weight: 700 !important;
+    text-transform: initial !important;
+}
+
+.tc {
+    margin-top: 25px;
+    color: black !important;
+}
+
 /* ? Edit Register Form Styles */
 
 .edit-register-form {
